fixed team imgs on mobile

--- a/src/styles/_team.scss
+++ b/src/styles/_team.scss
@@ -105,3 +105,10 @@
     opacity: 1;
   }
 }
+
+@media only screen and (max-width: 400px) {
+
+  .team-member {
+    width: 336px;
+  }
+}
